--- a/app/views/homes/_how_to_use.html.slim
+++ b/app/views/homes/_how_to_use.html.slim
@@ -1,13 +1,13 @@
 .lp-how-to-use__wrapper
   h2.lp-how-to-use__title
-    | slack de stepで自動メッセージを送るまで
+    | 使い方はかんたん！3つのステップで使えます
 
   .lp-how-to-use__step
     .lp-how-to-use__step-text
       h3.lp-how-to-use__step-title
         | step 1
       .lp-how-to-use__step-desc
-        | 下の「sign in with slack」ボタンからあなたのslackアカウントとslack de stepを連携します（無料！）
+        | 「sign in with slack」ボタンをクリック！<br>アクセスを許可します
     = image_tag "step_1.png", class: "lp-how-to-use__step-image"
 
   .lp-how-to-use__step
@@ -18,7 +18,7 @@
         | step 2
 
       .lp-how-to-use__step-desc
-        | メッセージを送りたいチャンネルを選択して「メッセージを追加」します
+        | メッセージを送りたいチャンネルを選択。<br>「メッセージを追加」します
 
   .lp-how-to-use__step
     .lp-how-to-use__step-text
@@ -26,7 +26,7 @@
         | step 3
 
       .lp-how-to-use__step-desc
-        | メッセージを送りたいタイミングを指定して登録をクリック。もちろんテスト送信もできます！
+        | DMを送りたいタイミングを指定して登録。<br>もちろんテスト送信もできます！
 
     = image_tag "step_3.png", class: "lp-how-to-use__step-image"
 
