LPのbg背景指定を修正する

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -41,7 +41,7 @@
     padding-top: 2rem;
     max-width: $lpwidth;
     margin: 2rem auto 0rem;
-    background: url("conversation_bg.png") no-repeat;
+    background: image-url("conversation_bg.png") no-repeat;
     background-size: $lpwidth;
     height: 570px;
   }
