--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -24,13 +24,25 @@
   &__logo {
     margin-left: 1rem;
     flex-grow: 1;
-    color: $white;
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 1.8rem;
+  }
+  &__logo-link {
+    color: $white;
+    text-decoration: none;
   }
   &__header-sign-in-image {
     width: 180px;
     padding: 1rem 1rem 0.6rem 0;
+  }
+  &__contents {
+    max-width: $lpwidth;
+    margin: 0 auto;
+  }
+  &__contents-privacy-policy {
+    line-height: 2;
+    margin-bottom: 5rem;
+    padding: 2rem;
   }
   &__firstview {
     margin-bottom: 4rem;
@@ -132,4 +144,15 @@
   &__cta-sign-in {
     width: 240px;
   }
+}
+
+footer {
+  background-color: #f6f6f6;
+  text-align: center;
+  padding: 2rem 1rem;
+  font-size: $littlesmaller;
+}
+footer > a {
+  color: $stronggray;
+  text-decoration: none;
 }
