問い合わせフォームを設置する

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -10,6 +10,7 @@ $slackpurple: #34163b;
 $slacklightpurple: #611f69;
 $slackblue: #1264a3;
 $slacklightblue: #31beeb;
+$placeholder: #aaaaaa;
 
 $slackpink: #ce375c;
 $slackgreen: #5bb281;
@@ -18,3 +19,4 @@ $littlesmaller: 0.9rem;
 $formfontsize: 16px;
 
 $lpwidth: 1200px;
+$formwidth: 30rem;
