--- a/app/views/homes/privacy_policy.html.slim
+++ b/app/views/homes/privacy_policy.html.slim
@@ -2,6 +2,5 @@
   .lp__header
     = render partial: "header"
 
-  .lp__contents
-    .lp__contents-privacy-policy
-      = render partial: "policy_items"
+.privacy-policy
+  = render partial: "policy_items"
